// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SensorsActions saveSensors 1`] = `
Object {
  "payload": Object {
    "sensors": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "sensors/saveSensors",
}
`;

exports[`SensorsActions setSensors 1`] = `
Object {
  "payload": Object {
    "sensors": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "sensors/setSensors",
}
`;

exports[`TemperatureLogActions createBreaches 1`] = `
Object {
  "payload": Object {
    "macAddress": "a",
  },
  "type": "temperature_logs/createBreaches",
}
`;

exports[`TemperatureLogActions createTemperatureLogs 1`] = `
Object {
  "payload": Object {
    "macAddress": "a",
  },
  "type": "temperature_logs/createTemperatureLogs",
}
`;

exports[`TemperatureLogActions saveSensorLogs 1`] = `
Object {
  "payload": Object {
    "data": Array [
      Object {
        "id": 1,
      },
    ],
    "macAddress": "a",
  },
  "type": "temperature_logs/saveSensorLogs",
}
`;

exports[`TemperatureLogActions saveTemperatureLogs 1`] = `
Object {
  "payload": Object {
    "temperatureLogs": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "temperature_logs/saveTemperatureLogs",
}
`;

exports[`TemperatureLogActions savedBreaches 1`] = `
Object {
  "payload": Object {
    "createdBreaches": Array [],
    "endedBreaches": Array [],
  },
  "type": "temperature_logs/savedBreaches",
}
`;

exports[`TemperatureLogActions savedTemperatureLogs 1`] = `
Object {
  "payload": Object {
    "logs": Array [
      Object {
        "id": 1,
      },
    ],
    "macAddress": "a",
  },
  "type": "temperature_logs/savedTemperatureLogs",
}
`;

exports[`TemperatureLogActions setTemperatureLogs 1`] = `
Object {
  "payload": Object {
    "temperatureLogs": Array [
      Object {
        "id": 1,
      },
    ],
  },
  "type": "temperature_logs/setTemperatureLogs",
}
`;
